# drake

./: README.md
.binder/: Dockerfile
examples/multibody/mp_convex_solver/: BUILD.bazel  README.md  clutter.cc  moving_box.cc  stack_of_objects.cc
examples/multibody/rolling_sphere/: rolling_sphere_run_dynamics.cc
multibody/contact_solvers/: BUILD.bazel  admm_solver.cc  admm_solver.h  block_sparse_linear_operator.h  convex_solver_base.cc  convex_solver_base.h  linear_operator.cc  linear_operator.h  pgs_solver.cc  point_contact_data.h  supernodal_solver.cc  system_dynamics_data.h  unconstrained_primal_solver.cc  unconstrained_primal_solver.h
multibody/contact_solvers/test/: admm_solver_test.cc  convex_solver_base_test.cc
multibody/plant/: BUILD.bazel  compliant_contact_computation_manager.cc  compliant_contact_computation_manager.h  discrete_update_manager.cc  discrete_update_manager.h  multibody_plant.cc  multibody_plant.h  multibody_plant_discrete_update_manager_attorney.h
tools/workspace/: default.bzl
