# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "clutter",
    srcs = [
        "clutter.cc",
    ],
    add_test_rule = 1,
    test_rule_args = [
        "--simulation_time=0.1",
        "--target_realtime_rate=0.0",
    ],
    copts = ["-O2","-g"],
    deps = [
        "//common:add_text_logging_gflags",
        "//geometry:drake_visualizer",
        "//multibody/plant:contact_results_to_lcm",
        "//multibody/plant:compliant_contact_computation_manager",
        "//multibody/contact_solvers:unconstrained_primal_solver",   
	    "//multibody/contact_solvers:admm_solver",      
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/framework:diagram",
        "//systems/analysis:simulator_print_stats",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "stack_of_objects",
    srcs = [
        "stack_of_objects.cc",
    ],
    copts = ["-O2","-g"],
    deps = [
        "//common:add_text_logging_gflags",
        "//geometry:drake_visualizer",
        "//multibody/plant:contact_results_to_lcm",
        "//multibody/plant:compliant_contact_computation_manager",
        "//multibody/contact_solvers:unconstrained_primal_solver", 
        "//multibody/contact_solvers:admm_solver",       
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/framework:diagram",
        "//systems/analysis:simulator_print_stats",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "moving_box",
    srcs = [
        "moving_box.cc",
    ],
    copts = ["-O2","-g"],
    deps = [
        "//common:add_text_logging_gflags",
        "//geometry:drake_visualizer",
        "//multibody/plant:contact_results_to_lcm",
        "//multibody/plant:compliant_contact_computation_manager",
        "//multibody/contact_solvers:unconstrained_primal_solver", 
        "//multibody/contact_solvers:admm_solver",       
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/framework:diagram",
        "//systems/analysis:simulator_print_stats",
        "@gflags",
    ],
)



add_lint_tests()


